--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <div id="login-section">
     <div class="login-card">
-      <img src="https://cdn-icons-png.flaticon.com/512/9187/9187604.png" alt="Logo" class="login-logo">
+      <<img src="IMG_0992.PNG" alt="Logo" class="login-logo">>
       <h3 class="login-title">SIDAMON</h3>
       <p class="login-subtitle">System Database & Monitoring</p>
       
@@ -170,7 +170,7 @@
       <div class="container-fluid px-4 px-lg-5 d-flex justify-content-between align-items-center">
         <div class="d-flex align-items-center">
           <div class="logo-wrapper">
-              <img src="https://cdn-icons-png.flaticon.com/512/9187/9187604.png" alt="Logo" style="height: 45px; width: auto;">
+            <img src="IMG_0992.PNGg" alt="Logo" style="height: 45px; width: auto;">
           </div>
           <div class="d-flex flex-column justify-content-center">
             <span class="text-white fw-bold" style="font-size: 1.1rem; letter-spacing: 0.5px; line-height: 1.2;">SIDAMON Gaharu Sempana Group</span>
@@ -1007,4 +1007,5 @@
   </script>
 </body>
 </html>
+
 
