--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <div id="login-section">
     <div class="login-card">
-      <<img src="IMG_0992.PNG" alt="Logo" class="login-logo">>
+      <img src="IMG_0992.PNG" alt="Logo" class="login-logo">
       <h3 class="login-title">SIDAMON</h3>
       <p class="login-subtitle">System Database & Monitoring</p>
       
@@ -1007,5 +1007,6 @@
   </script>
 </body>
 </html>
+
 
 
