--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="container-fluid px-4 px-lg-5 d-flex justify-content-between align-items-center">
         <div class="d-flex align-items-center">
           <div class="logo-wrapper">
-            <img src="IMG_0992.PNGg" alt="Logo" style="height: 45px; width: auto;">
+            <img src="IMG_0992.PNG" alt="Logo" style="height: 45px; width: auto;">
           </div>
           <div class="d-flex flex-column justify-content-center">
             <span class="text-white fw-bold" style="font-size: 1.1rem; letter-spacing: 0.5px; line-height: 1.2;">SIDAMON Gaharu Sempana Group</span>
@@ -1007,6 +1007,7 @@
   </script>
 </body>
 </html>
+
 
 
 
