--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>SIDAMON Gaharu Sempana Group</title>
+  <link rel="icon" type="image/png" href="Light Transparant.PNG">
   
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -517,7 +518,7 @@
             document.body.classList.remove('login-mode');
             document.body.style.position = ''; 
             document.body.style.overflow = 'auto'; 
-            document.title = "Dashboard Monitoring"; 
+            document.title = "SIDAMON Gaharu Sempana Group"; 
             
             applyRoleAccess(currentUserRole);
             loadAllData(); 
@@ -1007,6 +1008,7 @@
   </script>
 </body>
 </html>
+
 
 
 
