--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               </div>
               <div class="col-12 col-sm-6 col-lg-4">
                   <div class="stat-card bg-gradient-danger p-3 d-flex justify-content-between align-items-center">
-                      <div><div class="stat-label">Expired</div><div class="stat-value" id="skk-expired">0</div></div>
+                      <div><div class="stat-label">Sertifikat Expired</div><div class="stat-value" id="skk-expired">0</div></div>
                       <i class="bi bi-exclamation-triangle-fill fs-1 opacity-50"></i>
                   </div>
               </div>
@@ -1264,3 +1264,4 @@
   </script>
 </body>
 </html>
+
