--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
               finalBadge = `<span class="badge-status status-active">Available</span>`;
           } else {
               // Prioritas 3: Jika tidak ada yg used dan tidak ada yg active (semua expired)
-              finalBadge = `<span class="badge-status status-expired">Expired</span>`;
+              finalBadge = `<span class="badge-status status-expired">Personil Tidak Bisa Digunakan</span>`;
           }
 
           // --- B. RENDER KOLOM LAINNYA ---
@@ -1264,4 +1264,5 @@
   </script>
 </body>
 </html>
+
 
