--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
-  <title>Monitoring Proyek - Gaharu Sempana</title>
+  <title>SIDAMON Gaharu Sempana Group</title>
   <link rel="icon" type="image/png" href="Light Transparant.PNG">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -584,7 +584,7 @@
             document.body.classList.remove('login-mode');
             document.body.style.position = ''; 
             document.body.style.overflow = 'auto'; 
-            document.title = "Monitoring Proyek - Gaharu Sempana"; // JUDUL BROWSER SAAT LOGIN
+            document.title = "SIDAMON Gaharu Sempana Group"; // JUDUL BROWSER SAAT LOGIN
             
             applyRoleAccess(currentUserRole);
             loadAllData(); 
@@ -1308,3 +1308,4 @@
   </script>
 </body>
 </html>
+
