--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="login-card">
       <img src="IMG_0992.PNG" alt="Logo" class="login-logo">
       <h3 class="login-title">SIDAMON</h3>
-      <p class="login-subtitle">System Database & Monitoring</p>
+      <p class="login-subtitle">Sistem Database & Monitoring</p>
       
       <form onsubmit="handleLogin(event)">
         <div class="form-floating mb-4 text-start">
@@ -1308,4 +1308,5 @@
   </script>
 </body>
 </html>
+
 
