--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
-  <title>Monitoring Proyek - Gaharu Sempana</title>
+  <title>SIDAMON Gaharu Sempana Group</title>
   <link rel="icon" type="image/png" href="Light Transparant.PNG">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -213,7 +213,7 @@
     <div class="login-card">
       <img src="IMG_0992.PNG" alt="Logo" class="login-logo">
       <h3 class="login-title">SIDAMON</h3>
-      <p class="login-subtitle">System Database & Monitoring</p>
+      <p class="login-subtitle">Sistem Database & Monitoring</p>
       
       <form onsubmit="handleLogin(event)">
         <div class="form-floating mb-4 text-start">
@@ -305,8 +305,8 @@
             <table class="table table-hover align-middle">
               <thead class="table-light">
                   <tr>
-                      <th style="width: 20%; min-width: 200px;">Nama Personil & Perusahaan</th>
-                      <th class="text-center" style="width: 10%;">Kontak</th>
+                      <th style="width: 20%; min-width: 200px;">Nama Personil</th>
+                      <th class="text-center" style="width: 10%;">Kontak (WA)</th>
                       <th style="width: 20%; min-width: 150px;">Jenjang & Bidang Ilmu</th> 
                       <th style="width: 20%; min-width: 150px;">Sertifikat</th>
                       <th class="text-center" style="width: 8%;">Jenjang</th>
@@ -591,7 +591,7 @@
             document.body.classList.remove('login-mode');
             document.body.style.position = ''; 
             document.body.style.overflow = 'auto'; 
-            document.title = "Monitoring Proyek - Gaharu Sempana"; // JUDUL BROWSER SAAT LOGIN
+            document.title = "SIDAMON Gaharu Sempana Group"; // JUDUL BROWSER SAAT LOGIN
             
             applyRoleAccess(currentUserRole);
             loadAllData(); 
@@ -1330,3 +1330,4 @@
   </script>
 </body>
 </html>
+
