--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     }
     .greeting-wrapper {
       animation: slideInSmooth 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-      border-left: 1px solid rgba(255,255,255,0.2);
+      /* border-left: 1px solid rgba(255,255,255,0.2);  <-- DIHAPUS GARIS PEMISAHNYA */
       padding-left: 15px;
       margin-left: 15px;
     }
