--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
   <div id="dashboard-section">
     <nav class="navbar navbar-dark bg-primary shadow-sm mb-4 py-2 sticky-top">
-      <div class="container-fluid">
+      <div class="container-fluid px-4 px-lg-5">
         <div class="d-flex align-items-center">
           <div class="logo-wrapper">
               <img src="IMG_0992.PNG" alt="Logo" style="height: 45px; width: auto;">
