--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#000080">
   
   <title>SIDAMON Gaharu Sempana Group</title>
   <link rel="icon" type="image/png" href="Light Transparant.PNG">
@@ -434,7 +438,7 @@
                   <tr>
                       <th style="width: 20%; min-width: 200px;">Nama Personil</th>
                       <th class="text-center" style="width: 10%;">Kontak (WA)</th>
-                      <th style="width: 20%; min-width: 150px;">Jenjang & Bidang Ilmu</th> 
+                      <th style="width: 20%; min-width: 150px;">Jenjang Pendidikan</th> 
                       <th style="width: 20%; min-width: 150px;">Sertifikat</th>
                       <th class="text-center" style="width: 8%;">Jenjang</th>
                       <th class="text-center" style="width: 8%;">Sisa Waktu</th>
@@ -922,7 +926,7 @@
                 <div class="mt-2 d-md-none">${finalBadge}</div>
                 
                 <div class="d-md-none mt-3">
-                   <div class="mobile-card-label">Info Bidang</div>
+                   <div class="mobile-card-label">Jenjang Pendidikan</div>
                    <div class="small mb-2">${person.bidang || '-'}</div>
                    
                    <div class="mobile-card-label">Detail Sertifikat</div>
@@ -1322,3 +1326,4 @@
   </script>
 </body>
 </html>
+
