--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,8 @@
             <tr>
               <td>
                 <div class="fw-bold fs-6 mb-1 text-dark">${pekerjaan}</div>
-                <div class="d-flex align-items-center gap-2 mb-2">
+                
+                <div class="d-flex align-items-center gap-2 mb-2 d-md-none">
                    <span class="badge ${badgeClass}">${statusText || 'Not Started'}</span>
                    <span class="badge ${priorityClass} rounded-pill" style="font-size: 0.65rem;">${priority || 'Low'}</span>
                 </div>
@@ -1326,4 +1327,3 @@
   </script>
 </body>
 </html>
-
